--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           /></a>
         </div>
         <nav class="main-nav">
-          <a href="#home">Home</a>
+          <a href="#home">About</a>
           <a href="#tvShows">TV Shows</a>
           <a href="#movies">Movies</a>
           <a href="#originals">Originals</a>
